--- a/searching-product/views/add-product.ejs
+++ b/searching-product/views/add-product.ejs
@@ -5,22 +5,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add product</title>
+    <title>Add Product</title>
 </head>
 
 
 <body>
-    <form action="/add-product" method="posth1">
-        <h1>Add a new product</h1>
-        <h2>Name</h2><input type="text" name="pname" id="pname " placeholder="Product name">
-        <h2>Price</h2><input type="text" name="price" id="price" placeholder="Product price">
+    <form action="/add-product" method="post">
+        <h1>Add a New Product</h1>
+        <h2>Name</h2>
+        <input type="text" name="pname" id="pname" placeholder="Product name" required>
+        <h2>Price</h2>
+        <input type="text" name="price" id="price" placeholder="Product price" required>
         <h2>Description</h2>
-        <textarea name="desc" id="desc" placeholder="Description"></textarea>
-        <button type="submit">Add new product</button>
-
-
-
-
+        <textarea name="desc" id="desc" placeholder="Description" required></textarea>
+        <button type="submit">Add New Product</button>
     </form>
 
 
